<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context="com.swen900014.orange.rideshareoz.PassViewRide" >

    <GridLayout
        android:id="@+id/passGrid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:columnCount="6"
        android:fillViewport="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/StartPoint"
            android:id="@+id/startLabel"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_gravity="fill_horizontal|top|center_horizontal"
            android:layout_marginTop="10dp"/>

        <TextView
            android:ems="10"
            android:id="@+id/startEditPass"
            android:layout_row="0"
            android:layout_column="1"
            android:layout_marginTop="10dp"
            android:layout_gravity="fill_horizontal|bottom|center_horizontal"
            android:layout_width="wrap_content"
            android:layout_columnSpan="5"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/endPoint"
            android:id="@+id/endPointLabelPass"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_gravity="fill_horizontal|top|center_horizontal"
            android:layout_marginTop="10dp"/>

        <TextView
            android:ems="10"
            android:id="@+id/endEditPass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="1"
            android:layout_gravity="fill_horizontal|bottom|center_horizontal"
            android:layout_marginTop="10dp"
            android:layout_columnSpan="5"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/startTime"
            android:id="@+id/timeLabel"
            android:layout_row="2"
            android:layout_column="0"
            android:layout_gravity="fill_horizontal|top|center_horizontal"
            android:layout_marginTop="10dp"/>

        <TextView
            android:ems="10"
            android:id="@+id/arrivalTimeEditPass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="3"
            android:layout_column="1"
            android:layout_gravity="fill_horizontal|bottom|center_horizontal"
            android:layout_marginTop="10dp"
            android:layout_columnSpan="5"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/creator"
            android:id="@+id/driverLabelPassView"
            android:layout_row="4"
            android:layout_column="0"
            android:layout_gravity="fill_horizontal|top|center_horizontal"
            android:layout_marginTop="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/arrivalTime"
            android:id="@+id/textView"
            android:layout_row="3"
            android:layout_column="0"
            android:layout_gravity="fill_horizontal|top|center_horizontal"
            android:layout_marginTop="10dp"/>

        <TextView
            android:ems="10"
            android:id="@+id/startTimeEditPass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="1"
            android:layout_gravity="fill_horizontal|bottom|center_horizontal"
            android:layout_marginTop="10dp"
            android:layout_columnSpan="5"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/seats"
            android:id="@+id/textView3"
            android:layout_row="5"
            android:layout_column="0"
            android:layout_gravity="fill_horizontal|top|center_horizontal"
            android:layout_marginTop="10dp"/>

        <TextView
            android:ems="10"
            android:id="@+id/driverTextPassView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="4"
            android:layout_column="1"
            android:layout_gravity="fill_horizontal|bottom|center_horizontal"
            android:layout_marginTop="10dp"
            android:layout_columnSpan="5"/>

        <TextView
            android:ems="10"
            android:id="@+id/seatsEditPass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="5"
            android:layout_column="1"
            android:layout_gravity="fill_horizontal|bottom|center_horizontal"
            android:layout_marginTop="10dp"
            android:layout_columnSpan="5"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/passLabel"
            android:id="@+id/passLabel"
            android:layout_row="6"
            android:layout_column="0"
            android:layout_gravity="fill_horizontal|top|center_horizontal"
            android:layout_marginTop="10dp" />

        <TableLayout
            android:id="@+id/passengerListPass"
            android:layout_row="7"
            android:layout_column="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnSpan="5"
            android:layout_gravity="fill_horizontal|bottom|center">

        </TableLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/titleLabel"
            android:id="@+id/inputTableName"
            android:layout_row="8"
            android:layout_column="0"
            android:layout_columnSpan="6"
            android:layout_gravity="fill_horizontal"
            android:layout_marginTop="15dp"/>

        <AutoCompleteTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/pickUpLocText"
            android:layout_row="9"
            android:layout_column="0"
            android:layout_gravity="fill_horizontal"
            android:layout_marginTop="10dp"
            android:layout_columnSpan="6"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/timeLabel"
            android:id="@+id/pickuptimeLabel"
            android:layout_row="13"
            android:layout_column="0"
            android:layout_gravity="fill_horizontal|center_horizontal"
            android:layout_marginTop="10dp"
            android:visibility="gone"/>

        <EditText
            android:ems="10"
            android:id="@+id/pickupTimeText"
            android:inputType="textPostalAddress"
            android:layout_row="13"
            android:layout_column="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="fill_horizontal"
            android:layout_marginTop="10dp"
            android:layout_columnSpan="5"
            android:visibility="gone"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/joinButton"
            android:onClick="onClick"
            android:layout_row="14"
            android:layout_column="0"
            android:layout_gravity="center_horizontal"
            android:text="@string/joinButton"
            android:layout_marginTop="15dp"
            android:layout_columnSpan="6"/>

    </GridLayout>
</ScrollView>