<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context="com.swen900014.orange.rideshareoz.UserInfoActivity"
             android:gravity="center_vertical|center|center_horizontal"
             android:id="@+id/userInfoTable">

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/nameText"
            android:id="@+id/NameText"
            android:layout_column="0"
            android:layout_gravity="left|center"
            android:layout_marginBottom="10dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/ShowName"
            android:layout_column="1"
            android:layout_gravity="center_vertical"
            android:layout_marginBottom="10dp"
            android:inputType="textMultiLine"/>
    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/phoneText"
            android:id="@+id/PhoneText"
            android:layout_column="0"
            android:layout_gravity="left|center"
            android:layout_marginBottom="10dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/ShowPhone"
            android:layout_column="1"
            android:layout_gravity="center_vertical"
            android:layout_marginBottom="10dp"
            android:inputType="textMultiLine"/>
    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/emailText"
            android:id="@+id/EmailText"
            android:layout_column="0"
            android:layout_gravity="left|center"
            android:layout_marginBottom="10dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/ShowEmail"
            android:layout_column="1"
            android:layout_gravity="center_vertical"
            android:layout_marginBottom="10dp"
            android:inputType="textMultiLine"/>
    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/creditText"
            android:id="@+id/textView2"
            android:layout_column="0"
            android:layout_gravity="left|center"
            android:layout_marginBottom="10dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/ShowCredit"
            android:layout_column="1"
            android:layout_gravity="center_vertical"
            android:layout_marginBottom="10dp"
            android:inputType="textMultiLine"/>
    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/departureText"
            android:id="@+id/departureText"
            android:layout_column="0"
            android:layout_gravity="left|center"
            android:layout_marginBottom="10dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/ShowDeparture"
            android:layout_column="1"
            android:layout_gravity="center_vertical"
            android:layout_marginBottom="10dp"
            android:inputType="textMultiLine"/>

    </TableRow>

    <GridLayout android:layout_width="match_parent"
                android:columnCount="3"
                android:rowCount="1"
                android:layout_height="wrap_content"
                android:layout_margin="10dp">
        <Button
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:text="@string/acceptText"
            android:id="@+id/acceptButton"
            android:layout_column="0"
            android:textSize="12sp"
            android:gravity="center_vertical|center_horizontal"
            android:layout_margin="10dp"
            android:layout_marginLeft="20dp"/>

        <Button
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:text="@string/rejectText"
            android:id="@+id/rejectButton"
            android:layout_column="2"
            android:textSize="12sp"
            android:layout_row="0"
            android:layout_margin="10dp"
            android:layout_marginRight="20dp"/>
    </GridLayout>
</TableLayout>
